--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.2
+  equatable: ^1.2.2
+  flutter_bloc: ^5.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
